--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,14 @@
 [versions]
 agp = "8.4.1"
 kotlin = "1.9.0"
-playServicesWearable = "18.1.0"
+playServicesWearable = "18.2.0"
 composeBom = "2024.05.00"
 composeMaterial = "1.3.1"
 composeFoundation = "1.3.1"
 activityCompose = "1.9.0"
 coreSplashscreen = "1.0.1"
+composeNavigation = "1.4.0-beta02"
+lifecycleViewmodelAndroid = "2.8.1"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
@@ -20,6 +22,8 @@ compose-material = { group = "androidx.wear.compose", name = "compose-material",
 compose-foundation = { group = "androidx.wear.compose", name = "compose-foundation", version.ref = "composeFoundation" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
+compose-navigation = { group = "androidx.wear.compose", name = "compose-navigation", version.ref = "composeNavigation" }
+lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
