--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,21 @@
 [versions]
-agp = "8.4.1"
+agp = "8.5.0"
 kotlin = "1.9.0"
 playServicesWearable = "18.2.0"
-composeBom = "2024.05.00"
+composeBom = "2024.06.00"
 composeMaterial = "1.3.1"
 composeFoundation = "1.3.1"
 activityCompose = "1.9.0"
 coreSplashscreen = "1.0.1"
-composeNavigation = "1.4.0-beta02"
-lifecycleViewmodelAndroid = "2.8.1"
+composeNavigation = "1.4.0-beta03"
+lifecycleViewmodelAndroid = "2.8.2"
 horologistMediaUi = "0.6.13"
-horologistMediaData = "0.6.13"
+horologistMediaData = "0.6.14"
 media3Exoplayer = "1.4.0-alpha02"
-horologistAudioUi = "0.6.13"
+horologistAudioUi = "0.6.14"
+hiltLifecycleViewmodel = "1.0.0-alpha03"
+media3Session = "1.3.1"
+material3Android = "1.2.1"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
@@ -28,10 +31,13 @@ activity-compose = { group = "androidx.activity", name = "activity-compose", ver
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 compose-navigation = { group = "androidx.wear.compose", name = "compose-navigation", version.ref = "composeNavigation" }
 lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
-horologist-media-ui = { group = "com.google.android.horologist", name = "horologist-media-ui", version.ref = "horologistMediaUi" }
+horologist-media-ui = { group = "com.google.android.horologist", name = "horologist-media-ui", version = "0.6.14" }
 horologist-media-data = { group = "com.google.android.horologist", name = "horologist-media-data", version.ref = "horologistMediaData" }
 media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 horologist-audio-ui = { group = "com.google.android.horologist", name = "horologist-audio-ui", version.ref = "horologistAudioUi" }
+hilt-lifecycle-viewmodel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
+media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3Session" }
+material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
