--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ horologistAudioUi = "0.6.14"
 hiltLifecycleViewmodel = "1.0.0-alpha03"
 media3Session = "1.3.1"
 material3Android = "1.2.1"
+runtimeLivedata = "1.6.8"
 
 [libraries]
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
@@ -38,6 +39,7 @@ horologist-audio-ui = { group = "com.google.android.horologist", name = "horolog
 hilt-lifecycle-viewmodel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
 media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3Session" }
 material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
